Implemented greetings section

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="toggle-mode">
+    <!-- <div class="toggle-mode">
         <input type="checkbox" id="darkmode-toggle"/>
         <label for="darkmode-toggle"></label>
-    </div>
+    </div> -->
     <div class="greetings-section">
         <div class="greetings-container">
             <div class="japanese-greeting">
@@ -22,7 +22,7 @@
         </div>
         <button class="next-section">
             OFF WE GO
-            <span>&#10230;</span>
+            <span>&#8595;</span>
         </button>
     </div>
     <div class="hero-section">
