--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         </button>
     </div>
     <div class="hero-section">
+        <div class="">
 
+        </div>
     </div>
     <div class="skills-section">
 
