Organized main branch

--- a/index.html
+++ b/index.html
@@ -3,74 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Agnes & Clay | Portfolio</title>
+  <title>Calcium Prod. Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="horizontal-scroll-container">
-        <!-- <div class="toggle-mode">
-            <input type="checkbox" id="darkmode-toggle"/>
-            <label for="darkmode-toggle"></label>
-        </div> -->
-        <div class="greetings-section">
-            <div class="greetings-container">
-                <div class="japanese-greeting">
-                    こんにちは、生き物
-                </div>
-                <div class="english-greeting">
-                    HELLO THERE
-                </div>
-            </div>
-            <button class="next-section">
-                OFF WE GO
-                <span>&#10230;</span>
-            </button>
-        </div>
-        <div class="contact-me">
-            <a href="#">CONTACT ME</a>
-        </div>
-        <div class="social-icons">
-            <a href="https://github.com/cleliamolanda" target="_blank">
-                <img src="assets/images/icons/github.png" alt="GitHub">
-            </a>
-            <a href="https://www.linkedin.com/in/clelia-cyra-jaye-molanda-334b05297/" target="_blank">
-                <img src="assets/images/icons/linkedin.png" alt="LinkedIn">
-            </a>
-            <a href="https://www.instagram.com/cleliathefourth/" target="_blank">
-                <img src="assets/images/icons/instagram.png" alt="Instagram">
-            </a>
-            <a href="https://www.facebook.com/caseycyra/" target="_blank">
-                <img src="assets/images/icons/facebook.png" alt="Facebook">
-            </a>
-        </div>
 
-        <div class="hero-section" id="hero-section">
-            <div class="profile-container">
-                <div class="profile-img">
-                    <img src="assets/images/totoro.png" alt="Profile Image">
-                </div>
-                <h1>
-                    MY NAME IS <span class="myname">CLAY</span>
-                </h1>
-            </div>
-            <div class="tagline-container">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-        </div>
-        <div class="skills-section">
-
-        </div>
-        <div class="projects-section">
-
-        </div>
-        <div class="contact-section">
-
-        </div>
-    </div>
-
-    <script>
-        document.querySelector('.next-section').addEventListener('click', function() {
-            document.getElementById('hero-section').scrollIntoView({ behavior: 'smooth' });
-        });
-    </script>
 </body>
