Added assets and base code

--- a/index.html
+++ b/index.html
@@ -7,5 +7,38 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="page-wrapper">
+        <div class="main-wrapper">
+            <div class="hero-section">
+                <div class="hero-wrapper">
 
+                </div>
+            </div>
+
+            <div class="content-section">
+                <div class="padding-global">
+                    <div class="container align-center">
+                        <h1>CLAY MOLANDA</h1>
+                        <h2>WEBDESIGNER<br>FREELANCE</h2>
+                    </div>
+                </div>
+
+                <div class="padding-large"></div>
+
+                <div class="container text-align-left">
+                    <div class="w-layout-grid ">
+                        <div class="description"></div>
+                        <div class="container">
+                            <div class=""></div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="footer-section">
+
+            </div>
+        </div>
+    </div>
 </body>
